MD History: fix script errors when navigating to /syncedTabs (or refreshing)

Also simplifies sign in state changes by re-using existing
updateSignInState method (which already exists and waits for upgrades).

R=tsergeant@chromium.org
BUG=651707
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2456783006
Cr-Commit-Position: refs/heads/master@{#429478}

Former-commit-id: a83af91846aa14ec789ea3b74eb11cac7b056a40