chrome/browser/resources/history/other_devices.js
@@ -585,8 +585,6 @@ function load() {
   $('search-field').addEventListener('search', doSearch);
   $('search-button').addEventListener('click', doSearch);
 
-  cr.addWebUIListener('sign-in-state-updated', updateSignInState);
-
   chrome.send('otherDevicesInitialized');
 }
 
